changed style a little

--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,13 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-    
+    background-color: #A900DC0f;
+    color: #8D69E0;
 }
 
 h1 {
     margin: 30px auto;
+    color: #8D00E0;
 }
 
 p {
@@ -21,15 +23,18 @@ p {
 img {
     border-radius: 15px;
     margin-bottom: 15px;
+    height: 300px;
 }
 
 h2 {
     margin: 15px auto;
+    color: #AAABE6;
 }
 
 h3 {
     margin-top: 30px;
     margin-bottom: 30px;
+    color: #8D69E0;
 }
 
 ul, ol {
@@ -44,6 +49,11 @@ ul li, ol li {
 
 figure {
     margin: 15px auto;
+}
+
+form {
+    width: 650px;
+    margin: auto;
 }
 
 #flex-container {
@@ -67,9 +77,15 @@ input[type="text"] {
     display: block;
     margin: auto;
     margin-bottom: 10px;
+    width: 100%;
 }
 
 button {
-    margin-bottom: 25px;
+    margin: auto;
+    margin-bottom: 30px;
+    padding: 10px;
+    display: block;
+    width: 200px;
+    background-color: #E19CBD;
 }
 
